--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link
-  rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Fjalla+One&family=Koulen&family=Saira+Condensed:wght@100;200&family=Teko&display=swap" rel="stylesheet">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React App</title>
 </head>
-<body>
+<body style="background-color:rgb(26, 29, 35);">
   <div id="root"></div>
   <script src="./bundle.js"></script>
 </body>
